[package]
name = "rust-charts"
version = "0.1.0"
authors = ["Braydon Hall <40751395+nobrayner@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
phf = { version = "0.10", features = ["macros"] }